--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -193,6 +193,11 @@
                 android:resource="@string/htsr_enable_summary" />
         </activity>
 
+        <service
+            android:name=".touchsampling.TouchSamplingService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="false" />
+
         <!-- Tile Entry Activity -->
          <activity
              android:name=".TileEntryActivity"
