peridot: rootdir: Restore I/O performance As one can see in cfq_arm_slice_timer(), the CFQ I/O scheduler supports two parameters that can make it delay I/O: group_idle and slice_idle. Restore I/O performance by setting both the group_idle and slice_idle parameters to zero.
Signed-off-by: 01soni247 <01soni247@gmail.com>
Signed-off-by: Drenzzz <realdrenzzz@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -71,6 +71,7 @@ on init
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     chown system system /sys/devices/platform/soc/1d84000.ufshc/auto_hibern8
     chmod 0660 /sys/devices/platform/soc/1d84000.ufshc/auto_hibern8
+    write /sys/block/sda/queue/iosched/group_idle 0
     start logd
     mkdir /dev/cpuctl/general
     copy_per_line /dev/cpuctl/tasks /dev/cpuctl/general/tasks
