--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -173,6 +173,9 @@ gEnableSelfRecovery=1
 #Enable Power Save offload
 gEnablePowerSaveOffload=4
 
+#Enable Optimized Power Management
+gOptimizedPowerManagement=1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
