--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -74,10 +74,10 @@
             </intent-filter>
         </receiver>
 
-        <!--   <activity
+        <activity
             android:name=".thermal.ThermalSettingsActivity"
             android:label="@string/thermal_title"
-            android:theme="@style/Theme.SubSettingsBase_v31"
+            android:theme="@style/Theme.SubSettingsBase_v31.Thermal"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
@@ -93,7 +93,7 @@
         <service
             android:name=".thermal.ThermalService"
             android:permission="ThermalService">
-        </service>-->
+        </service>
 
         <activity
             android:name=".speaker.ClearSpeakerActivity" 
