--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -170,6 +170,9 @@ gDroppedPktDisconnectTh=2047
 # enable Self Recovery
 gEnableSelfRecovery=1
 
+#Enable Power Save offload
+gEnablePowerSaveOffload=4
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
