peridot: parts: ThermalTileService: Disable cpu lpm in performance mode
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: kenway214 <kenway214@outlook.com>
Signed-off-by: Drenzzz <realdrenzzz@gmail.com>

--- a/rootdir/etc/init.peridot.rc
+++ b/rootdir/etc/init.peridot.rc
@@ -258,3 +258,9 @@ service vendor.sensors-hal-multihal /vendor/bin/hw/android.hardware.sensors-serv
     socket audio_us_socket_1 seqpacket 0666 system system
     capabilities BLOCK_SUSPEND
     rlimit rtprio 10 10
+
+on property:sys.perf_mode_active=1
+    write /sys/devices/system/cpu/qcom_lpm/parameters/sleep_disabled 1
+    
+on property:sys.perf_mode_active=0
+    write /sys/devices/system/cpu/qcom_lpm/parameters/sleep_disabled 0
