--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -104,6 +104,8 @@
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE"/>
             </intent-filter>
+            <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
+                android:value="true" />
         </service>
         
         <activity
@@ -150,6 +152,8 @@
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE"/>
             </intent-filter>
+            <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
+                android:value="true" />
         </service>
         
         <!-- Display Saturation activity -->
@@ -177,6 +181,8 @@
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
+            <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
+                android:value="true" />
         </service>
 
         <!-- Displayfeature color service -->
@@ -195,6 +201,6 @@
                  <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
              </intent-filter>
          </activity>
-         
+
     </application>
 </manifest>
