peridot: parts: Introduce Per-App Touch Sampling Rate
Add support for per-application High Touch Sampling Rate (HTSR) in the device settings app.Add support for per-application High Touch Sampling Rate (HTSR) in the device settings app.
Allow enbale HTSR per-application when HTSR option is disabled.

Signed-off-by: Drenzzz <realdrenzzz@gmail.com>

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -209,6 +209,13 @@
             </intent-filter>
         </service>
 
+        <!-- Per-App Touch Sampling Activity -->
+        <activity
+            android:name=".touchsampling.TouchSamplingPerAppActivity"
+            android:label="@string/per_app_htsr_title"
+            android:theme="@style/Theme.SubSettingsBase"
+            android:exported="false" />        
+
         <!-- Tile Entry Activity -->
          <activity
              android:name=".TileEntryActivity"
